Closed
Bug 707117
Opened 14 years ago
Closed 14 years ago
a small 'typo' in lirasm at assemble_load
Categories
(Core Graveyard :: Nanojit, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: gnudles, Unassigned)
Details
User Agent: Mozilla/5.0 (Ubuntu; X11; Linux i686; rv:8.0) Gecko/20100101 Firefox/8.0
Build ID: 20111115184056
Steps to reproduce:
skimmed over the code:
/js/src/lirasm/lirasm.cpp line 664
Actual results:
my eyes spotted two identical lines
Expected results:
I think It should be
mTokens[1].find("0X") == 0 ||
instead of
mTokens[1].find("0x") == 0 ||
Updated•14 years ago
|
Component: General → Nanojit
Product: Firefox → Core
QA Contact: general → nanojit
Comment 1•14 years ago
|
||
Hi, a n00b here. Are you talking about code on lines 558-559?
558 mTokens[1].find("0x") == 0 ||
559 mTokens[1].find("0x") == 0 ||
in this file: http://mxr.mozilla.org/mozilla1.9.2/source/js/src/lirasm/lirasm.cpp
Then I guess you're right.
Comment 2•14 years ago
|
||
Good eyes.
NC:
http://hg.mozilla.org/projects/nanojit-central/rev/19a1d081200c
TR:
http://hg.mozilla.org/tamarin-redux/rev/08c43603eb30
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•12 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•