Bug 707117 - a small 'typo' in lirasm at assemble_load